Leaflet button fixes
This commit fixes one issue and temporarily hides another.
The rotation icon was not showing up properly, so some style overrides
have been applied to the .easy-button-button class to force proper
display.

A second issue is that on ipad/mobile views, the fullscreen mode is not
working properly any longer. For the time being I have simply disabled
this feature from all touchscreen devices by adding a display:none rule
to the fullscreen button when touch is detected. This rule can be
removed when we discover a fix.

--- a/source/assets/stylesheets/components/_js-styles.scss
+++ b/source/assets/stylesheets/components/_js-styles.scss
@@ -29,6 +29,9 @@
 // }
 
 .leaflet-touch .leaflet-fullscreen {
+  // temporary workaround since this is not working on mobile
+  display: none;
+
   width: 34px !important;
   height: 34px !important;
   line-height: 38px !important;
@@ -40,8 +43,17 @@
   background-size: 24px;
 }
 
-.rotate-icon {
+.easy-button-button {
+  // background-image: url(image-path("icons/noun_191739.svg"));
   padding: 3px;
+  padding-top: 1px;
+}
+
+.rotate-icon {
+  // display: none;
+  // padding: 3px;
+  // height: 10px;
+  // width: 10px;
 }
 
 // force override for Leaflet's z-index behavior
